--- a/mobile client/index.html
+++ b/mobile client/index.html
@@ -14,7 +14,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="faextended.css" />
     <script src="./config.js"></script>
-    <script src="./vue.js"></script>
+    <script src="./vue.min.js"></script>
 </head>
 <body>
     <div id='app'>
