--- a/client/index.html
+++ b/client/index.html
@@ -102,7 +102,7 @@
                         this.categories = data.data
                     })
                     .catch(err => {
-                        console.log(err)
+                        this.categories = []
                     })
                 },
                 getProducts(openTab = '', parameter = '', load = true) {
@@ -118,7 +118,7 @@
                         this.loading = false;
                     })
                     .catch(err => {
-                        console.log(err)
+                        this.products = [];
                         this.loading = false;
                     })
                 },
@@ -255,7 +255,7 @@
                         localStorage.setItem('totalsum', this.totalsum)
                     })
                     .catch(err => {
-                        console.log(err)
+                        // console.log(err)
                     })
                 },
                 getLocalCart() {
